--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@popperjs/core": "^2.11.8",
+		"flowbite": "^2.4.1",
+		"flowbite-svelte": "^0.46.11",
+		"tailwind-merge": "^2.3.0"
+	}
 }
